--- a/css/style.css
+++ b/css/style.css
@@ -198,14 +198,15 @@ header h2 {
       visibility: hidden; }
 
 #combination {
+  width: 185px;
+  height: 30px;
+  position: relative;
+  top: 7px;
+  margin: 0 auto;
   visibility: hidden;
   display: flex;
   justify-content: center;
   align-items: center;
-  position: relative;
-  width: 185px;
-  top: 7px;
-  margin: 0 auto;
   background: #E5C26D;
   border-style: solid;
   border-width: 5px 5px 0 5px;
@@ -235,7 +236,7 @@ header h2 {
   width: 1.375em;
   height: 1.375em;
   margin-left: 0.625em;
-  background-image: url("../svgo/info.svg");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='52' height='52' viewBox='0 0 52 52'%3E%3Cdefs%3E%3Ccircle id='a' cx='26' cy='26' r='26'/%3E%3C/defs%3E%3Cuse xlink:href='%23a' overflow='visible' fill='%2375a2d9'/%3E%3CclipPath id='b'%3E%3Cuse xlink:href='%23a' overflow='visible'/%3E%3C/clipPath%3E%3Cg%3E%3Cpath d='M30 42c0 2.2-1.8 4-4 4s-4-1.8-4-4 1.8-4 4-4 4 1.8 4 4zm5.5-27.3c-1.5-2.5-3.8-4.4-6.7-5.1-2.8-.8-5.8-.4-8.3 1.1-1 .6-2.2 1.3-3.5 2v6.9c2.2-1.3 5.5-3.2 6.5-3.8 1.2-.7 2.5-.8 3.8-.5 1.3.3 2.4 1.2 3 2.3.7 1.2.8 2.5.5 3.8-.3 1.3-1.2 2.4-2.3 3L23 27.7V36h6v-4.8l2.5-1.4c2.5-1.5 4.4-3.8 5.1-6.7.8-2.9.4-5.8-1.1-8.4z' fill='%23dedcd9'/%3E%3Cpath d='M30 42c0 2.2-1.8 4-4 4s-4-1.8-4-4 1.8-4 4-4 4 1.8 4 4zm5.5-27.3c-1.5-2.5-3.8-4.4-6.7-5.1-2.8-.8-5.8-.4-8.3 1.1-1 .6-2.2 1.3-3.5 2v6.9c2.2-1.3 5.5-3.2 6.5-3.8 1.2-.7 2.5-.8 3.8-.5 1.3.3 2.4 1.2 3 2.3.7 1.2.8 2.5.5 3.8-.3 1.3-1.2 2.4-2.3 3L23 27.7V36h6v-4.8l2.5-1.4c2.5-1.5 4.4-3.8 5.1-6.7.8-2.9.4-5.8-1.1-8.4z' fill='%23FFF' opacity='.5'/%3E%3C/g%3E%3C/svg%3E");
   background-size: contain;
   background-repeat: no-repeat; }
   #info:hover #message {
@@ -250,7 +251,7 @@ header h2 {
   top: 25px;
   right: 92px;
   padding: 25px 10px 10px;
-  background-image: url("../svgo/bubble.svg");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 209 77' preserveAspectRatio='none' xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink'%3E%3Cdefs%3E%3ClinearGradient x1='0%' y1='0%' y2='100%' id='b'%3E%3Cstop stop-color='%23E1A300' offset='0%'/%3E%3Cstop stop-color='%23F4AD44' offset='100%'/%3E%3C/linearGradient%3E%3Cfilter x='-50%' y='-50%' width='200%' height='200%' filterUnits='objectBoundingBox' id='a'%3E%3CfeOffset in='SourceAlpha' result='shadowOffsetOuter1'/%3E%3CfeGaussianBlur stdDeviation='1.5' in='shadowOffsetOuter1' result='shadowBlurOuter1'/%3E%3CfeColorMatrix values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.184193841 0' in='shadowBlurOuter1' result='shadowMatrixOuter1'/%3E%3CfeMerge%3E%3CfeMergeNode in='shadowMatrixOuter1'/%3E%3CfeMergeNode in='SourceGraphic'/%3E%3C/feMerge%3E%3C/filter%3E%3Cpath d='M0 32.995C0 21.952 8.952 13 19.997 13h163.006C194.047 13 203 21.96 203 32.995v19.01C203 63.048 194.048 72 183.003 72H19.997C8.953 72 0 63.04 0 52.005v-19.01zM101.5 0l12 13h-24l12-13z' id='c'/%3E%3C/defs%3E%3Cg transform='translate(3 2)' filter='url(%23a)' opacity='.9' fill='none' fill-rule='evenodd'%3E%3Cuse fill='url(%23b)' xlink:href='%23c'/%3E%3Cuse xlink:href='%23c'/%3E%3C/g%3E%3C/svg%3E");
   background-size: contain;
   background-repeat: no-repeat;
   font-size: 12px;
@@ -305,7 +306,8 @@ label {
   position: relative;
   top: 24%;
   font-size: 0.95rem;
-  white-space: nowrap; }
+  white-space: wrap;
+  text-align: center; }
   label:focus {
     outline-width: 0; }
   @media (min-width: 480px) {
